--- a/index.html
+++ b/index.html
@@ -2,45 +2,38 @@
 <html lang="en">
 
 <head>
-  <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>轮播图</title>
-  <link rel="stylesheet" href="a.css">
-  <style>
-    .images {
-      display: flex;
-      align-items: flex-start;
-      transition: transform 0.5s;
-    }
-
-    .window {
-      width: 300px;
-      overflow: hidden;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>轮播图</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
-  <div class="window">
-    <div class="images" id='images'>
-      <img src="https://www.dogbreedslist.info/uploads/allimg/dog-pictures/Cavalier-King-Charles-Spaniel-1.jpg"
-        width=300 alt="" height=225>
-      <img src="https://www.dogbreedslist.info/uploads/allimg/dog-pictures/Beagle-1.jpg" width=300 alt="" height=225>
-      <img src="https://www.dogbreedslist.info/uploads/allimg/dog-pictures/French-Bulldog-1.jpg" width=300 alt=""
-        height=225>
-
+    <div class="window">
+        <div class="images" id="images">
+            <img src="https://www.dogbreedslist.info/uploads/allimg/dog-pictures/Cavalier-King-Charles-Spaniel-1.jpg"
+                width=300 alt="" height=225>
+            <img src="https://www.dogbreedslist.info/uploads/allimg/dog-pictures/Beagle-1.jpg" width=300 alt=""
+                height=225>
+            <img src="https://www.dogbreedslist.info/uploads/allimg/dog-pictures/French-Bulldog-1.jpg" width=300 alt=""
+                height=225>
+            <img src="https://www.dogbreedslist.info/uploads/allimg/dog-pictures/Cavalier-King-Charles-Spaniel-1.jpg"
+                width=300 alt="" height=225>
+            <img src="https://www.dogbreedslist.info/uploads/allimg/dog-pictures/Beagle-1.jpg" width=300 alt=""
+                height=225>
+        </div>
     </div>
-  </div>
+    <span id="buttons">
+        <button>第1张</button>
+        <button>第2张</button>
+        <button>第3张</button>
+        <button>第4张</button>
+        <button>第5张</button>
+    </span>
 
-  <span id="buttons">
-    <span>第1张</span>
-    <span>第2张</span>
-    <span>第3张</span>
-  </span>
-
+    <script src="./main.js"></script>
 </body>
-<script src="./b.js"></script>
 
 </html>
